--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "react-dom": "18.1.0"
   },
   "devDependencies": {
-    "@types/node": "^17.0.31",
+    "@types/node": "^17.0.33",
     "@types/react": "^18.0.9",
     "eslint": "8.15.0",
     "eslint-config-next": "12.1.6",
-    "prisma": "^3.14.0"
+    "prisma": "^3.14.0",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.4"
   },
   "prisma": {
-    "schema": "db/schema.prisma"
+    "schema": "db/schema.prisma",
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} db/seed.ts"
   }
 }
